[package]
name = "permitlayer-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tower middleware chain and transport adapters for permitlayer."

# Story 8.8b: collapse integration tests into one binary. See
# tests/integration/mod.rs for the submodule declarations and
# tests/README.md for the rationale + new-test-file convention.
autotests = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dependencies]
permitlayer-core.workspace = true
permitlayer-vault.workspace = true
permitlayer-credential.workspace = true
permitlayer-oauth.workspace = true
permitlayer-plugins.workspace = true
permitlayer-connectors.workspace = true
thiserror.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http-body-util.workspace = true
tracing.workspace = true
ulid.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Story 11.16: `plugin_host_services` reads `ConnectionRecord` TOMLs from
# `<home>/connections/` (v2 provenance) synchronously, mirroring
# `ConnectionFsStore`'s on-disk shape without the async store dep.
toml.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
zeroize.workspace = true
rand.workspace = true
subtle.workspace = true
async-trait.workspace = true
tokio.workspace = true
url.workspace = true
rmcp.workspace = true
schemars.workspace = true
hyper-util.workspace = true
urlencoding.workspace = true

[dev-dependencies]
permitlayer-core = { workspace = true, features = ["test-seam"] }
permitlayer-oauth = { workspace = true, features = ["test-seam"] }
tokio.workspace = true
tracing-test.workspace = true
tracing-subscriber.workspace = true
mockito.workspace = true
tempfile.workspace = true
async-trait.workspace = true
static_assertions.workspace = true
insta.workspace = true
# Story 6.2: rquickjs for the host_api_e2e tests that drive the
# JS-side Promise resolution via `Promise::finish` (AD2). Already
# compiled transitively via permitlayer-plugins; this just makes
# the API directly nameable.
rquickjs.workspace = true

[lints]
workspace = true
