[package]
name = "permitlayer-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Master key lifecycle and seal/unseal for permitlayer credentials."

[dependencies]
permitlayer-credential = { path = "../permitlayer-credential", version = "0.1.0" }
permitlayer-keystore = { path = "../permitlayer-keystore", version = "0.1.0" }
thiserror.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
